resolve design issue

--- a/views/public/html/SANGLOBE-contract.html
+++ b/views/public/html/SANGLOBE-contract.html
@@ -164,12 +164,12 @@ u+.body .list_block ol {
         <span style="font-family: 'Arial Narrow';">&nbsp;</span>
     </div>
 </div>
-    <table cellspacing="0" cellpadding="0" style="width:100%; border-collapse:collapse;font-size: 10px;">
+    <table cellspacing="0" cellpadding="0" style="width:100%; border-collapse:collapse;font-size: 8px;">
             <tbody>
                 <tr >
                     <td colspan="2" style="">
                        <strong style="font-family:'Arial Narrow';">Full Name :</strong>
-                            <input type="text" id="fullName" style="border: none;">
+                            <input type="text" id="fullName" style="border: none;width: 80%;">
                     </td>
                     <td colspan="7" style="">
                        <span style="font-family:'Arial Narrow';">(The seafarer)</span></p>
@@ -294,16 +294,16 @@ u+.body .list_block ol {
                     </tr>
                     <tr style="height:18.4pt;">
                         <td style="width:116.55pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
-                            <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; widows:0; orphans:0; font-size:9.5pt;"><span style="font-family:'Arial Narrow';"><span><input type="text" id="rank" style="border: none;" ></span></span></p>
+                            <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; widows:0; orphans:0; font-size:9.5pt;"><span style="font-family:'Arial Narrow';"><span><input type="text" id="rank" style="border: none;text-align: center;" ></span></span></p>
                         </td>
                         <td style="width:134.45pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
-                            <p style="margin-top:0pt; margin-bottom:0pt; widows:0; orphans:0; font-size:9.5pt;"><span style="font-family:'Arial Narrow';">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span style="font-family:'Arial Narrow';"><span><input type="text" style="border: none;" ></span></span></p>
+                            <p style="margin-top:0pt; margin-bottom:0pt; widows:0; orphans:0; font-size:9.5pt;"><span style="font-family:'Arial Narrow';">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span style="font-family:'Arial Narrow';"><span><input type="text" style="border: none;text-align: center;" ></span></span></p>
                         </td>
                         <td style="width:92pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
-                            <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; widows:0; orphans:0; font-size:9.5pt;"><span style="font-family:'Arial Narrow';"><span><input type="text" style="border: none;" ></span></span></p>
+                            <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; widows:0; orphans:0; font-size:9.5pt;"><span style="font-family:'Arial Narrow';"><span><input type="text" style="border: none;text-align: center;" ></span></span></p>
                         </td>
                         <td style="width:145.15pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
-                            <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; widows:0; orphans:0; font-size:9.5pt;"><span style="font-family:'Arial Narrow';"><span><input type="text" style="border: none;" ></span></span></p>
+                            <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; widows:0; orphans:0; font-size:9.5pt;"><span style="font-family:'Arial Narrow';"><span><input type="text" style="border: none;text-align: center;" ></span></span></p>
                         </td>
                     </tr>
                 </tbody>
@@ -346,28 +346,28 @@ u+.body .list_block ol {
                 </tr>
                 <tr>
                     <td style="border-right: 1px solid #000;  text-align: center;">
-                        <input type="text" style="border: none; width: 80%;"/>
+                        <input type="text" style="border: none; width: 80%;text-align: center;"/>
                     </td>
                     <td style="border-right: 1px solid #000;  text-align: center;">
-                        <input type="text" style="border: none; width: 80%;"/>
+                        <input type="text" style="border: none; width: 80%;text-align: center;"/>
                     </td>
                     <td style="border-right: 1px solid #000;  text-align: center;">
-                        <input type="text" style="border: none; width: 80%;"/>
+                        <input type="text" style="border: none; width: 80%;text-align: center;"/>
                     </td>
                     <td style="border-right: 1px solid #000;  text-align: center;">
-                        <input type="text" style="border: none; width: 80%;"/>
+                        <input type="text" style="border: none; width: 80%;text-align: center;"/>
                     </td>
                     <td style="border-right: 1px solid #000;  text-align: center;">
-                        <input type="text" style="border: none; width: 80%;"/>
+                        <input type="text" style="border: none; width: 80%;text-align: center;"/>
                     </td>
                     <td style="border-right: 1px solid #000;  text-align: center;">
-                        <input type="text" style="border: none; width: 80%;"/>
+                        <input type="text" style="border: none; width: 80%;text-align: center;"/>
                     </td>
                     <td style="border-right: 1px solid #000;  text-align: center;">
-                        <input type="text" style="border: none; width: 80%;"/>
+                        <input type="text" style="border: none; width: 80%;text-align: center;"/>
                     </td>
                     <td style=" text-align: center;">
-                        <input type="text" style="border: none; width: 80%;"/>
+                        <input type="text" style="border: none; width: 80%;text-align: center;"/>
                     </td>
                 </tr>
             </tbody>
