--- a/views/public/html/SANMARREGENT-contract.html
+++ b/views/public/html/SANMARREGENT-contract.html
@@ -45,74 +45,74 @@
 			<div style="font-size: 10.5pt;"><span style="font-family: 'Arial Narrow';">the owner of the vessel below stated and the employer herein (the “Shipowner”)</span></div>
 			<div style="font-size: 10.5pt;"><span style="font-family: 'Arial Narrow';">AND</span></div>
 		</div>
-		<table cellspacing="0" cellpadding="0" class="TableGrid" style="width:100%; max-width: 558.25pt; border-collapse:collapse;font-size: 12px;">
+		<table cellspacing="0" cellpadding="0" class="TableGrid" style="width:100%; max-width: 558.25pt; border-collapse:collapse;font-size: 10px;">
 			<tr style="height:10.9pt">
-				<td colspan="2" style="width:125.1pt;">
+				<td colspan="2" style="width:75px;">
 					<span style="font-family:'Arial Narrow'; font-size:11pt;">Full Name :</span>
 				</td>
 				<td colspan="7" style="width:275.7pt;">
-					<input type="text" id="fullName" style="border: none; width: 100%;">
+					<input type="text" id="fullName" style="border: none; width: 200%;font-size: 8px;">
 				</td>
 				<td colspan="2" style="width:125.05pt;">
 					<span style="font-size:11pt; margin-left:36.6pt;">(the “Seafarer”)</span>
 				</td>
 			</tr>
 			<tr style="height:13.9pt">
-				<td colspan="2" style="width:125.1pt;">
+				<td colspan="2" style="width:75px;">
 					<span style="font-family:'Arial Narrow'; font-size:11pt;">Date and Place of Birth :</span>
 				</td>
 				<td colspan="9" style="width:411.55pt;">
-					<input type="text" id="dob" style="border: none; width: 100%;">
+					<input type="text" id="dob" style="border: none; width: 100%;font-size: 8px;">
 				</td>
 			</tr>
 			<tr style="height:13.9pt">
-				<td colspan="2" style="width:125.1pt;">
+				<td colspan="2" style="width:75px;">
 					<span style="font-family:'Arial Narrow'; font-size:11pt;">Passport Details:</span>
 				</td>
 				<td colspan="3" style="width:128.2pt;">
-					<input type="text" style="border: none; width: 100%;">
+					<input type="text" style="border: none; width: 100%;font-size: 8px;">
 				</td>
 				<td colspan="6" style="width:283.35pt;">
 					<span style="font-family:'Arial Narrow'; font-size:11pt;">Issued on:</span>
-					<input type="text" style="border: none; width: 30%; display: inline-block;">
+					<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 					<span style="font-family:'Arial Narrow'; font-size:11pt;">At:</span>
-					<input type="text" style="border: none; width: 30%; display: inline-block;">
+					<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 				</td>
 			</tr>
 			<tr style="height:4pt">
-				<td colspan="2" style="width:125.1pt;">
+				<td colspan="2" style="width:75px;">
 					<span style="font-family:'Arial Narrow'; font-size:11pt;">Seaman's Book Details:</span>
 				</td>
 				<td colspan="3" style="width:128.2pt;">
-					<input type="text" style="border: none; width: 100%;">
+					<input type="text" style="border: none; width: 100%;font-size: 8px;">
 				</td>
 				<td colspan="6" style="width:283.35pt;">
 					<span style="font-family:'Arial Narrow'; font-size:11pt;">Issued on:</span>
-					<input type="text" style="border: none; width: 30%; display: inline-block;">
+					<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 					<span style="font-family:'Arial Narrow'; font-size:11pt;">At:</span>
-					<input type="text" style="border: none; width: 30%; display: inline-block;">
+					<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 				</td>
 			</tr>
 			<tr style="height:13.9pt">
-				<td colspan="2" style="width:125.1pt;">
+				<td colspan="2" style="width:75px;">
 					<span style="font-family:'Arial Narrow'; font-size:11pt;">Cert. of Competency:</span>
 				</td>
 				<td colspan="3" style="width:128.2pt;">
-					<input type="text" style="border: none; width: 100%;">
+					<input type="text" style="border: none; width: 100%;font-size: 8px;">
 				</td>
 				<td colspan="6" style="width:283.35pt;">
 					<span style="font-family:'Arial Narrow'; font-size:11pt;">Issued on:</span>
-					<input type="text" style="border: none; width: 30%; display: inline-block;">
+					<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 					<span style="font-family:'Arial Narrow'; font-size:11pt;">At:</span>
-					<input type="text" style="border: none; width: 30%; display: inline-block;">
+					<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 				</td>
 			</tr>
 			<tr style="height:13.9pt">
-				<td colspan="2" style="width:125.1pt;">
-					<span style="font-family:'Arial Narrow'; font-size:11pt;">Joining Port:</span>
+				<td colspan="2" style="width:75px;">
+					<span style="font-family:'Arial Narrow'; font-size: 8px;">Joining Port:</span>
 				</td>
 				<td colspan="9" style="width:411.55pt;">
-					<input type="text" style="border: none; width: 100%;">
+					<input type="text" style="border: none; width: 100%;font-size: 8px;">
 				</td>
 			</tr>
 			<tr style="height:9.55pt">
@@ -129,7 +129,7 @@
 					<span style="font-family:'Arial Narrow'; font-size:9.5pt;">of</span>
 				</td>
 				<td colspan="2" style="width:61.4pt; border-bottom:solid 0.75pt;  vertical-align:bottom;">
-					<input type="text" style="border: none;">
+					<input type="text" style="border: none;font-size: 8px;">
 				</td>
 				<td style="width:70.5pt;  vertical-align:bottom;">
 					<span style="font-family:'Arial Narrow'; font-size:9.5pt;">Flag, IMO Nbr:</span>
@@ -181,10 +181,10 @@
         </thead>
         <tbody>
           <tr>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;">2nd Engineer</td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Enter place" style="width: 100%; padding: 4px; border: none;"></td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Enter duration" style="width: 100%; padding: 4px; border: none;"></td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Enter date" style="width: 100%; padding: 4px; border: none;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Enter place" style="width: 100%; padding: 4px; border: none;font-size: 8px; text-align: center;" id="rank"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Enter place" style="width: 100%; padding: 4px; border: none;font-size: 8px; text-align: center;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Enter duration" style="width: 100%; padding: 4px; border: none;font-size: 8px; text-align: center;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Enter date" style="width: 100%; padding: 4px; border: none;font-size: 8px; text-align: center;"></td>
           </tr>
         </tbody>
       </table>
@@ -206,14 +206,14 @@
         </thead>
         <tbody>
           <tr>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none;"></td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none;"></td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none;"></td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none;"></td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none;"></td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none;"></td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none;"></td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Total" style="width: 100%; padding: 4px; border: none;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000;font-size: 6pt;"><input type="text" placeholder="Total" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
           </tr>
         </tbody>
       </table>
