--- a/views/public/html/SCLMERCURY-contract.html
+++ b/views/public/html/SCLMERCURY-contract.html
@@ -54,44 +54,44 @@
 			</div>
 			<table cellspacing="0" cellpadding="0" class="TableGrid" style="width:100%; max-width: 558.25pt; border-collapse:collapse;font-size: 10px;">
 				<tr style="height:10.9pt">
-					<td colspan="2" style="width:125.1pt;">
+					<td colspan="2" >
 						<span style="font-family:'Arial Narrow'; font-size:10px;">Full Name :</span>
 					</td>
 					<td colspan="7" style="width:275.7pt;">
-						<input type="text" id="fullName" style="border: none; width: 100%;">
+						<input type="text" id="fullName" style="border: none; width: 200%;font-size: 8px;">
 					</td>
 					<td colspan="2" style="width:125.05pt;">
 						<span style="font-size:10px; margin-left:36.6pt;">(the “Seafarer”)</span>
 					</td>
 				</tr>
 				<tr style="height:13.9pt">
-					<td colspan="2" style="width:125.1pt;">
+					<td colspan="2" >
 						<span style="font-family:'Arial Narrow'; font-size:10px;">Date and Place of Birth :</span>
 					</td>
 					<td colspan="9" style="width:411.55pt;">
-						<input type="text" id="dob" style="border: none; width: 100%;">
+						<input type="text" id="dob" style="border: none; width: 100%;font-size: 8px;">
 					</td>
 				</tr>
 				<tr style="height:13.9pt">
-					<td colspan="2" style="width:125.1pt;">
+					<td colspan="2" >
 						<span style="font-family:'Arial Narrow'; font-size:10px;">Passport Details:</span>
 					</td>
 					<td colspan="3" style="width:128.2pt;">
-						<input type="text" style="border: none; width: 100%;">
+						<input type="text" style="border: none; width: 100%;font-size: 8px;">
 					</td>
 					<td colspan="6" style="width:283.35pt;">
 						<span style="font-family:'Arial Narrow'; font-size:10px;">Issued on:</span>
-						<input type="text" style="border: none; width: 30%; display: inline-block;">
+						<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 						<span style="font-family:'Arial Narrow'; font-size:10px;">At:</span>
-						<input type="text" style="border: none; width: 30%; display: inline-block;">
+						<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 					</td>
 				</tr>
 				<tr style="height:4pt">
-					<td colspan="2" style="width:125.1pt;">
+					<td colspan="2" >
 						<span style="font-family:'Arial Narrow'; font-size:10px;">Seaman's Book Details:</span>
 					</td>
 					<td colspan="3" style="width:128.2pt;">
-						<input type="text" style="border: none; width: 100%;">
+						<input type="text" style="border: none; width: 100%;font-size: 8px;">
 					</td>
 					<td colspan="6" style="width:283.35pt;">
 						<span style="font-family:'Arial Narrow'; font-size:10px;">Issued on:</span>
@@ -101,11 +101,11 @@
 					</td>
 				</tr>
 				<tr style="height:13.9pt">
-					<td colspan="2" style="width:125.1pt;">
+					<td colspan="2" >
 						<span style="font-family:'Arial Narrow'; font-size:10px;">Cert. of Competency:</span>
 					</td>
 					<td colspan="3" style="width:128.2pt;">
-						<input type="text" style="border: none; width: 100%;">
+						<input type="text" style="border: none; width: 100%;font-size: 8px;">
 					</td>
 					<td colspan="6" style="width:283.35pt;">
 						<span style="font-family:'Arial Narrow'; font-size:10px;">Issued on:</span>
@@ -115,11 +115,11 @@
 					</td>
 				</tr>
 				<tr style="height:13.9pt">
-					<td colspan="2" style="width:125.1pt;">
+					<td colspan="2" >
 						<span style="font-family:'Arial Narrow'; font-size:10px;">Joining Port:</span>
 					</td>
 					<td colspan="9" style="width:411.55pt;">
-						<input type="text" style="border: none; width: 100%;">
+						<input type="text" style="border: none; width: 100%;font-size: 8px;">
 					</td>
 				</tr>
 				<tr style="height:9.55pt">
@@ -136,13 +136,13 @@
 						<span style="font-family:'Arial Narrow'; font-size:9.5pt;">of</span>
 					</td>
 					<td colspan="2" style="width:61.4pt; border-bottom:solid 0.75pt;  vertical-align:bottom;">
-						<input type="text" style="border: none;">
+						<input type="text" style="border: none;font-size: 8px;">
 					</td>
 					<td style="width:70.5pt;  vertical-align:bottom;">
 						<span style="font-family:'Arial Narrow'; font-size:9.5pt;">Flag, IMO Nbr:</span>
 					</td>
 					<td colspan="3" style="width:49.65pt; border-bottom:solid 0.75pt;  vertical-align:bottom;">
-						<input type="text" style="border:none;">
+						<input type="text" style="border:none;font-size: 8px;">
 					</td>
 					<td style="width:88.45pt;  vertical-align:bottom;">
 						<span style="font-family:'Arial Narrow'; font-size:9.5pt;">(the “VESSEL”)</span>
@@ -189,16 +189,16 @@
 				  </tr>
 				  <tr style="height:18.4pt">
 					 <td style="width:109.4pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:middle; -aw-border-right:0.5pt single; -aw-border-top:0.5pt single">
-						<p style="text-align:center; widows:0; orphans:0; font-size:9.5pt"><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;" id="rank"></span></p>
+						<p style="text-align:center; widows:0; orphans:0; font-size:9.5pt"><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;text-align:center;" id="rank"></span></p>
 					 </td>
 					 <td style="width:124pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:middle; -aw-border-left:0.5pt single; -aw-border-right:0.5pt single; -aw-border-top:0.5pt single">
-						<p style="text-align:center; widows:0; orphans:0; font-size:9.5pt"><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;"></span></p>
+						<p style="text-align:center; widows:0; orphans:0; font-size:9.5pt"><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;text-align:center;"></span></p>
 					 </td>
 					 <td style="width:123.15pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:middle; -aw-border-left:0.5pt single; -aw-border-right:0.5pt single; -aw-border-top:0.5pt single">
-						<p style="text-align:center; widows:0; orphans:0; font-size:9.5pt"><span style="font-family:'Arial Narrow'; -aw-import:spaces">&#xa0;</span><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;">(+/- 1 MONTHS)</span></p>
+						<p style="text-align:center; widows:0; orphans:0; font-size:9.5pt"><span style="font-family:'Arial Narrow'; -aw-import:spaces">&#xa0;</span><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;text-align:center;">(+/- 1 MONTHS)</span></p>
 					 </td>
 					 <td style="width:123.05pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:middle; -aw-border-left:0.5pt single; -aw-border-top:0.5pt single">
-						<p style="text-align:center; widows:0; orphans:0; font-size:8pt"><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;font-size: 8px;width:100%;" placeholder="THE DAY CREW EMBARK THE VESSEL"></span></p>
+						<p style="text-align:center; widows:0; orphans:0; font-size:8pt"><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;font-size: 8px;width:100%;text-align:center;" placeholder="THE DAY CREW EMBARK THE VESSEL"></span></p>
 					 </td>
 				  </tr>
 			   </table>
@@ -217,14 +217,14 @@
 				   <td style="border-bottom:0.75pt solid #000000; padding:5px; text-align:center; font-size:7pt;">TOTAL WAGES [CTC]</td>
 			   </tr>
 			   <tr style="height:19.75pt">
-				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
+				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;text-align:center;"></td>
+				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;text-align:center;"></td>
+				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;text-align:center;"></td>
+				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;text-align:center;"></td>
+				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;text-align:center;"></td>
+				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;text-align:center;"></td>
+				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;text-align:center;"></td>
+				   <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;text-align:center;"></td>
 				   <td style="padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
 			   </tr>
 		   </table>
