--- a/views/public/html/SIVAGANGAI-contract.html
+++ b/views/public/html/SIVAGANGAI-contract.html
@@ -48,7 +48,7 @@
                     <p style="margin-bottom:1pt; font-size:10px;"><span style="font-family:'Arial Narrow'">Full Name :</span></p>
                 </td>
                 <td colspan="7" style="width:275.7pt; vertical-align:top;">
-                    <p style="margin-bottom:1pt; font-size:10px;"><input type="text" id="fullName" style="border: none; width: 100%;"></p>
+                    <p style="margin-bottom:1pt; font-size:10px;"><input type="text" id="fullName" style="border: none; width: 200%;font-size:8px;"></p>
                 </td>
                 <td colspan="2" style="width:125.05pt; vertical-align:top;">
                     <p style="margin-left:36.6pt; margin-bottom:1pt; font-size:10px;">(the “Seafarer”)</p>
@@ -59,7 +59,7 @@
                     <p style="margin-bottom:1pt; font-size:10px;"><span style="font-family:'Arial Narrow'">Date and Place of Birth :</span></p>
                 </td>
                 <td colspan="9" style="width:411.55pt; vertical-align:top;">
-                    <p style="margin-bottom:1pt; font-size:10px;"><input type="text" id="dob" style="border: none; width: 100%;"></p>
+                    <p style="margin-bottom:1pt; font-size:10px;"><input type="text" id="dob" style="border: none; width: 100%;font-size:8px;"></p>
                 </td>
             </tr>
             <tr style="height:13.9pt">
@@ -67,14 +67,14 @@
                     <p style="margin-bottom:1pt; font-size:10px;"><span style="font-family:'Arial Narrow'">Passport Details:</span></p>
                 </td>
                 <td colspan="3" style="width:128.2pt; vertical-align:top;">
-                    <p style="margin-bottom:1pt; font-size:10px;"><input type="text" style="border: none; width: 100%;"></p>
+                    <p style="margin-bottom:1pt; font-size:10px;"><input type="text" style="border: none; width: 100%;font-size:8px;"></p>
                 </td>
                 <td colspan="6" style="width:283.35pt; vertical-align:top;">
                     <p style="margin-bottom:1pt; font-size:10px;">
                         <span style="font-family:'Arial Narrow'">Issued on:</span>
                         <input type="text" style="border: none; width: 30%; display: inline-block;">
                         <span style="font-family:'Arial Narrow'">At:</span>
-                        <input type="text" style="border: none; width: 30%; display: inline-block;">
+                        <input type="text" style="border: none; width: 30%; display: inline-block;font-size:8px;">
                     </p>
                 </td>
             </tr>
@@ -83,14 +83,14 @@
                     <p style="margin-bottom:1pt; font-size:10px;"><span style="font-family:'Arial Narrow'">Seaman's Book Details:</span></p>
                 </td>
                 <td colspan="3" style="width:128.2pt; vertical-align:top;">
-                    <p style="margin-bottom:1pt; font-size:10px;"><input type="text" style="border: none; width: 100%;"></p>
+                    <p style="margin-bottom:1pt; font-size:10px;"><input type="text" style="border: none; width: 100%;font-size:8px;"></p>
                 </td>
                 <td colspan="6" style="width:283.35pt; vertical-align:top;">
                     <p style="margin-bottom:1pt; font-size:10px;">
                         <span style="font-family:'Arial Narrow'">Issued on:</span>
-                        <input type="text" style="border: none; width: 30%; display: inline-block;">
+                        <input type="text" style="border: none; width: 30%; display: inline-block;font-size:8px;">
                         <span style="font-family:'Arial Narrow'">At:</span>
-                        <input type="text" style="border: none; width: 30%; display: inline-block;">
+                        <input type="text" style="border: none; width: 30%; display: inline-block;font-size:8px;">
                     </p>
                 </td>
             </tr>
@@ -99,14 +99,14 @@
                     <p style="margin-bottom:1pt; font-size:10px;"><span style="font-family:'Arial Narrow'">Cert. of Competency:</span></p>
                 </td>
                 <td colspan="3" style="width:128.2pt; vertical-align:top;">
-                    <p style="margin-bottom:1pt; font-size:10px;"><input type="text" style="border: none; width: 100%;"></p>
+                    <p style="margin-bottom:1pt; font-size:10px;"><input type="text" style="border: none; width: 100%;font-size:8px;"></p>
                 </td>
                 <td colspan="6" style="width:283.35pt; vertical-align:top;">
                     <p style="margin-bottom:1pt; font-size:10px;">
                         <span style="font-family:'Arial Narrow'">Issued on:</span>
-                        <input type="text" style="border: none; width: 30%; display: inline-block;">
+                        <input type="text" style="border: none; width: 30%; display: inline-block;font-size:8px;">
                         <span style="font-family:'Arial Narrow'">At:</span>
-                        <input type="text" style="border: none; width: 30%; display: inline-block;">
+                        <input type="text" style="border: none; width: 30%; display: inline-block;font-size:8px;">
                     </p>
                 </td>
             </tr>
@@ -115,7 +115,7 @@
                     <p style="margin-bottom:1pt; font-size:10px;"><span style="font-family:'Arial Narrow'">Joining Port:</span></p>
                 </td>
                 <td colspan="9" style="width:411.55pt; vertical-align:top;">
-                    <p style="margin-bottom:1pt; font-size:10px;"><span style="font-family:'Arial Narrow'"><input type="text" id="port" style="border: none; width: 100%;"></span></p>
+                    <p style="margin-bottom:1pt; font-size:10px;"><span style="font-family:'Arial Narrow'"><input type="text" id="port" style="border: none; width: 100%;font-size:8px;"></span></p>
                 </td>
             </tr>
             <tr style="height:9.55pt">
@@ -132,13 +132,13 @@
                     <p style="font-size:9.5pt;"><span style="font-family:'Arial Narrow'">of</span></p>
                 </td>
                 <td colspan="2" style="width:61.4pt; border-bottom:solid 0.75pt; vertical-align:bottom;">
-                    <p style="font-size:9.5pt;"><span style="font-family:'Arial Narrow'; font-weight:bold;"><input type="text" style="border: none;"></span></p>
+                    <p style="font-size:9.5pt;"><span style="font-family:'Arial Narrow'; font-weight:bold;"><input type="text" style="border: none;font-size:8px;"></span></p>
                 </td>
                 <td style="width:70.5pt; vertical-align:bottom;">
                     <p style="font-size:9.5pt;"><span style="font-family:'Arial Narrow'">Flag, IMO Nbr:</span></p>
                 </td>
                 <td colspan="3" style="width:49.65pt; border-bottom:solid 0.75pt; vertical-align:bottom;">
-                    <p style="font-size:10pt;"><span style="font-family:'Arial Narrow'; font-weight:bold;"><input type="text" style="border: none;"></span></p>
+                    <p style="font-size:10pt;"><span style="font-family:'Arial Narrow'; font-weight:bold;"><input type="text" style="border: none;font-size:8px;"></span></p>
                 </td>
                 <td style="width:88.45pt; vertical-align:bottom;">
                     <p style="font-size:9.5pt;"><span style="font-family:'Arial Narrow'">(the “VESSEL”)</span></p>
@@ -149,7 +149,7 @@
                     <p style="text-align:right; font-size:9.5pt;"><span style="font-family:'Arial Narrow'">Vessel Type:</span></p>
                 </td>
                 <td colspan="6" style="width:261.85pt; border-bottom:solid 0.75pt; vertical-align:bottom;">
-                    <p style="font-size:9.5pt;"><span style="font-family:'Arial Narrow'; font-weight:bold;">   <select id="vesselDrop" style="border: none; outline: none;">
+                    <p style="font-size:9.5pt;"><span style="font-family:'Arial Narrow'; font-weight:bold;">   <select id="vesselDrop" style="border: none; outline: none;font-size:8px;">
                         <option value="">Select a Vessel Type</option>
                         <!-- Options will be populated here -->
                     </select></span></p>
@@ -194,16 +194,16 @@
                </tr>
                <tr style="height:18.4pt">
                   <td style="width:109.4pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:middle; -aw-border-right:0.5pt single; -aw-border-top:0.5pt single">
-                     <p style="text-align:center; widows:0; orphans:0; font-size:9.5pt"><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;" id="rank"></span></p>
+                     <p style="text-align:center; widows:0; orphans:0; font-size:9.5pt"><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;font-size:8px;text-align:center;" id="rank"></span></p>
                   </td>
                   <td style="width:124pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:middle; -aw-border-left:0.5pt single; -aw-border-right:0.5pt single; -aw-border-top:0.5pt single">
-                     <p style="text-align:center; widows:0; orphans:0; font-size:9.5pt"><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;"></span></p>
+                     <p style="text-align:center; widows:0; orphans:0; font-size:9.5pt"><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;font-size:8px;text-align:center;"></span></p>
                   </td>
                   <td style="width:123.15pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:middle; -aw-border-left:0.5pt single; -aw-border-right:0.5pt single; -aw-border-top:0.5pt single">
-                     <p style="text-align:center; widows:0; orphans:0; font-size:9.5pt"><span style="font-family:'Arial Narrow'; -aw-import:spaces">&#xa0;</span><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;">(+/- 1 MONTHS)</span></p>
+                     <p style="text-align:center; widows:0; orphans:0; font-size:9.5pt"><span style="font-family:'Arial Narrow'; -aw-import:spaces">&#xa0;</span><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;font-size:8px;text-align:center;">(+/- 1 MONTHS)</span></p>
                   </td>
                   <td style="width:123.05pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:middle; -aw-border-left:0.5pt single; -aw-border-top:0.5pt single">
-                     <p style="text-align:center; widows:0; orphans:0; font-size:8pt"><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;font-size: 8px;width:100%;" placeholder="THE DAY CREW EMBARK THE VESSEL"></span></p>
+                     <p style="text-align:center; widows:0; orphans:0; font-size:8pt"><span style="font-family:'Arial Narrow'"><input type="text" style="border: none;font-size: 8px;width:100%;text-align:center;" placeholder="THE DAY CREW EMBARK THE VESSEL"></span></p>
                   </td>
                </tr>
             </table>
@@ -222,14 +222,14 @@
                 <td style="border-bottom:0.75pt solid #000000; padding:5px; text-align:center; font-size:7pt;">TOTAL WAGES [CTC]</td>
             </tr>
             <tr style="height:19.75pt">
-                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
-                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
+                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;font-size:8px;text-align:center;"></td>
+                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;font-size:8px;text-align:center;"></td>
+                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;font-size:8px;text-align:center;"></td>
+                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;font-size:8px;text-align:center;"></td>
+                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;font-size:8px;text-align:center;"></td>
+                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;font-size:8px;text-align:center;"></td>
+                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;font-size:8px;text-align:center;"></td>
+                <td style="border-right:0.75pt solid #000000; padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;font-size:8px;text-align:center;"></td>
                 <td style="padding:5px; text-align:center; font-size:8pt;"><input type="text" style="border: none; width:100%;"></td>
             </tr>
         </table>
