--- a/views/public/html/JSWINFRA-contract.html
+++ b/views/public/html/JSWINFRA-contract.html
@@ -116,11 +116,11 @@
 	</style><!--[if mso ]><style>sup, sub { font-size: 100% !important; } sup { mso-text-raise:10% } sub { mso-text-raise:-10% }</style> <![endif]-->
 </head>
 
-	<body class="body" style="background-color: #ffffff; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
-		<div style="width:100%;background-color: #269396; text-align: center; height:100px;padding:3px"> <img src="./letter-pad-top.jpg"  style="height:90px"></div>
+	<body class="body" style="background-color: #ffffff; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
+		<div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
 
 		
-		<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff; width: 1024px; margin: 0 auto;">
+		<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
 			<tbody>
 				<tr>
 					<td>
@@ -135,7 +135,7 @@
 														<table class="html_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 															<tr>
 																<td class="pad">
-																	<div style="font-family:Arial, Helvetica, sans-serif;text-align:start;" align="center">    <div><p style="padding: 0;"><span style="border: black 1px solid;padding: 5px;">NEMO ID :<span id="candidateId"></span></span></p></div></div>
+																	<div style="font-family:Arial, Helvetica, sans-serif;text-align:start;" align="center">    <div><p style="padding: 5px;"><span style="border: black 1px solid;padding: 5px;">NEMO ID :<span id="candidateId"></span></span></p></div></div>
 																</td>
 															</tr>
 														</table>
@@ -153,7 +153,7 @@
 														<table class="html_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 															<tr>
 																<td class="pad">
-																	<div style="font-family:Arial, Helvetica, sans-serif;text-align:end;" align="center">    <div><p style="padding: 0;"><span style="border: black 1px solid;padding: 5px;">RPSL/CHN/012</span></p></div></div>
+																	<div style="font-family:Arial, Helvetica, sans-serif;text-align:end;" align="center">    <div><p style="padding: 5px;"><span style="border: black 1px solid;padding: 5px;">RPSL/CHN/012</span></p></div></div>
 	</div>
 																</td>
 															</tr>
@@ -212,35 +212,35 @@
 																			<tr>
 																				<td width="50%" style=" word-break: break-word; border-top: 0px solid #dddddd; border-right: 0px solid #dddddd; border-bottom: 0px solid #dddddd; border-left: 0px solid #dddddd;">Full Name&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;:</td>
 																				<td width="50%" style=" word-break: break-word; border: none;">
-																					<input id="fullName" type="text" style="width: 100%; border: none; outline: none;" placeholder="Full Name">
+																					<input id="fullName" type="text" style="width: 200%; border: none; outline: none;font-size: 10px;" placeholder="Full Name">
 																				</td>
 																																						</tr>
 																			<tr>
 																				<td width="50%" style=" word-break: break-word; border-top: 0px solid #dddddd; border-right: 0px solid #dddddd; border-bottom: 0px solid #dddddd; border-left: 0px solid #dddddd;">Date and Place of Birth :&nbsp;</td>
 																				<td width="50%" style=" word-break: break-word; border: none;">
-																					<input id="dob" type="text" style="width: 100%; border: none; outline: none;" placeholder="DOB">
+																					<input id="dob" type="text" style="width: 100%; border: none; outline: none;font-size: 10px;" placeholder="DOB">
 																				</td>
 																																						</tr>
 																			<tr>
 																				<td width="50%" style=" word-break: break-word; border-top: 0px solid #dddddd; border-right: 0px solid #dddddd; border-bottom: 0px solid #dddddd; border-left: 0px solid #dddddd;">Passport Details.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;:</td>
 																				<td width="50%" style=" word-break: break-word; border: none;">
-																					<input id="passport" type="text" style="width: 100%; border: none;outline: none;" placeholder="Passport">
+																					<input id="passport" type="text" style="width: 100%; border: none;outline: none;font-size: 10px;" placeholder="Passport">
 																				</td>
 																																						</tr>
 																			<tr>
 																				<td width="50%" style=" word-break: break-word; border-top: 0px solid #dddddd; border-right: 0px solid #dddddd; border-bottom: 0px solid #dddddd; border-left: 0px solid #dddddd;">Seaman's Book Details :</td>
 																				<td width="50%" style=" word-break: break-word; border: none;">
-																					<input id="seamanbook" type="text" style="width: 100%; border: none;outline: none;" placeholder="Seaman Book ">
+																					<input id="seamanbook" type="text" style="width: 100%; border: none;outline: none;font-size: 10px;" placeholder="Seaman Book ">
 																				</td>																		</tr>
 																			<tr>
 																				<td width="50%" style=" word-break: break-word; border-top: 0px solid #dddddd; border-right: 0px solid #dddddd; border-bottom: 0px solid #dddddd; border-left: 0px solid #dddddd;">Cert. of Competency.&nbsp; &nbsp; :</td>
 																				<td width="50%" style=" word-break: break-word; border: none;">
-																					<input id="coc" type="text" style="width: 100%; border: none;outline: none;" placeholder="C O C">
+																					<input id="coc" type="text" style="width: 100%; border: none;outline: none;font-size: 10px;" placeholder="C O C">
 																				</td>																		</tr>
 																			<tr>
 																				<td width="50%" style=" word-break: break-word; border-top: 0px solid #dddddd; border-right: 0px solid #dddddd; border-bottom: 0px solid #dddddd; border-left: 0px solid #dddddd;">Joining Port&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;:</td>
 																				<td width="50%" style=" word-break: break-word; border: none;">
-																					<input id="jp" type="text" style="width: 100%; border: none;outline: none;" placeholder="Port">
+																					<input id="jp" type="text" style="width: 100%; border: none;outline: none;font-size: 10px;" placeholder="Port">
 																				</td>																		</tr>
 																		</tbody>
 																	</table>
@@ -334,7 +334,7 @@
 														</table>
 														<table class="paragraph_block block-2" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 															<tr>
-																<td class="pad" style=" padding: 0;">
+																<td class="pad">
 																	<div style="color:#101112; direction:ltr; font-family:Arial, Helvetica, sans-serif; font-size:12px; font-weight:400; letter-spacing:0px; line-height:0%; text-align:left; ">
 																		<p style="margin: 0;">
 																			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Vessel Type: 
@@ -390,7 +390,7 @@
 											<tbody>
 												<tr>
 													<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-														<table class="paragraph_block block-1" width="100%" border="0" cellpadding="" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+														<table class="paragraph_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 															<tr>
 																<td class="pad">
 																	<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:10px;font-weight:400;letter-spacing:0px;text-align:left;">
@@ -427,23 +427,23 @@
 																				<th width="25%" style=" word-break: break-word; font-weight: 700; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">Wage starts from</th>
 																			</tr>
 																		</thead>
-																		<tbody style="vertical-align: top; font-size: 16px; line-height: 120%;">
+																		<tbody style="vertical-align: top; font-size: 12px; line-height: 120%;">
 																			<tr>
 																				<td width="25%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none; text-align: center;" placeholder="Rank on Board" id="rank">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center;" placeholder="Rank on Board" id="rank">
 																				</td>
 																				<td width="25%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<select style="width: 100%; border: none; border-bottom: 1px solid black; outline: none; text-align: center;" id="placeOfEngagement">
+																					<select style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center" id="placeOfEngagement">
 																						<option value="">Select Place of Engagement</option>
 																						<option value="Chennai">Chennai</option>
 																						<option value="Mumbai">Mumbai</option>
 																					</select>
 																																								</td>
 																				<td width="25%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none; text-align: center;" placeholder="Duration of Contract">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center" placeholder="Duration of Contract">
 																				</td>
 																				<td width="25%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none; text-align: center;" placeholder="Wage starts from">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center" placeholder="Wage starts from">
 																				</td>
 																			</tr>
 																		</tbody>
@@ -486,34 +486,34 @@
 																			</tr>
 																		</thead>
 						
-																		<tbody style="vertical-align: top; font-size: 16px; line-height: 120%;">
+																		<tbody style="vertical-align: top; font-size: 12px; line-height: 120%;">
 																			<tr>
 																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="Basic Monthly Wage">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center" placeholder="Basic Monthly Wage">
 																				</td>
 																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="Leave Wage">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center" placeholder="Leave Wage">
 																				</td>
 																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="O.T">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center" placeholder="O.T">
 																				</td>
 																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="Miscellaneous Allowances">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center" placeholder="Miscellaneous Allowances">
 																				</td>
 																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="Owners Allowances">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center" placeholder="Owners Allowances">
 																				</td>
 																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="PF Seafarer">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center" placeholder="PF Seafarer">
 																				</td>
 																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="CBA wages onboard">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center" placeholder="CBA wages onboard">
 																				</td>
 																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="PF Company Contribution">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center" placeholder="PF Company Contribution">
 																				</td>
 																				<td width="12.5%" style=" word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;" placeholder="Total Wages (CTC)">
+																					<input type="text" style="width: 100%; border: none; border-bottom: 1px solid black; outline: none;text-align: center" placeholder="Total Wages (CTC)">
 																				</td>
 																			</tr>
 																		</tbody>
@@ -672,7 +672,7 @@
 							</tbody>
 						</table>		
 
-						<div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.png"  style="width:100%; height:90px"></div>				
+						<div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
 						<div class="page-break" ></div>
 <div style="margin-left: 30px;margin-right: 30px;">
 					<table class="row row-12" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;margin-top: 150px;">
