--- a/views/public/html/SANMARROYAL-contract.html
+++ b/views/public/html/SANMARROYAL-contract.html
@@ -54,7 +54,7 @@
 				<span style="font-family:'Arial Narrow'; font-size:11pt;">Full Name :</span>
 			</td>
 			<td colspan="7" style="width:275.7pt;">
-				<input type="text" id="fullName" style="border: none; width: 100%;">
+				<input type="text" id="fullName" style="border: none; width: 100%;font-size: 8px;">
 			</td>
 			<td colspan="2" style="width:125.05pt;">
 				<span style="font-size:11pt; margin-left:36.6pt;">(the “Seafarer”)</span>
@@ -65,7 +65,7 @@
 				<span style="font-family:'Arial Narrow'; font-size:11pt;">Date and Place of Birth :</span>
 			</td>
 			<td colspan="9" style="width:411.55pt;">
-				<input type="text" id="dob" style="border: none; width: 100%;">
+				<input type="text" id="dob" style="border: none; width: 100%;font-size: 8px;">
 			</td>
 		</tr>
 		<tr >
@@ -73,13 +73,13 @@
 				<span style="font-family:'Arial Narrow'; font-size:11pt;">Passport Details:</span>
 			</td>
 			<td colspan="3" style="width:128.2pt;">
-				<input type="text" style="border: none; width: 100%;">
+				<input type="text" style="border: none; width: 100%;font-size: 8px;">
 			</td>
 			<td colspan="6" style="width:283.35pt;">
 				<span style="font-family:'Arial Narrow'; font-size:11pt;">Issued on:</span>
-				<input type="text" style="border: none; width: 30%; display: inline-block;">
+				<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 				<span style="font-family:'Arial Narrow'; font-size:11pt;">At:</span>
-				<input type="text" style="border: none; width: 30%; display: inline-block;">
+				<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 			</td>
 		</tr>
 		<tr style="height:4pt">
@@ -87,13 +87,13 @@
 				<span style="font-family:'Arial Narrow'; font-size:11pt;">Seaman's Book Details:</span>
 			</td>
 			<td colspan="3" style="width:128.2pt;">
-				<input type="text" style="border: none; width: 100%;">
+				<input type="text" style="border: none; width: 100%;font-size: 8px;">
 			</td>
 			<td colspan="6" style="width:283.35pt;">
 				<span style="font-family:'Arial Narrow'; font-size:11pt;">Issued on:</span>
-				<input type="text" style="border: none; width: 30%; display: inline-block;">
+				<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 				<span style="font-family:'Arial Narrow'; font-size:11pt;">At:</span>
-				<input type="text" style="border: none; width: 30%; display: inline-block;">
+				<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 			</td>
 		</tr>
 		<tr >
@@ -101,13 +101,13 @@
 				<span style="font-family:'Arial Narrow'; font-size:11pt;">Cert. of Competency:</span>
 			</td>
 			<td colspan="3" style="width:128.2pt;">
-				<input type="text" style="border: none; width: 100%;">
+				<input type="text" style="border: none; width: 100%;font-size: 8px;">
 			</td>
 			<td colspan="6" style="width:283.35pt;">
 				<span style="font-family:'Arial Narrow'; font-size:11pt;">Issued on:</span>
-				<input type="text" style="border: none; width: 30%; display: inline-block;">
+				<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 				<span style="font-family:'Arial Narrow'; font-size:11pt;">At:</span>
-				<input type="text" style="border: none; width: 30%; display: inline-block;">
+				<input type="text" style="border: none; width: 30%; display: inline-block;font-size: 8px;">
 			</td>
 		</tr>
 		<tr >
@@ -115,7 +115,7 @@
 				<span style="font-family:'Arial Narrow'; font-size:11pt;">Joining Port:</span>
 			</td>
 			<td colspan="9" style="width:411.55pt;">
-				<input type="text" style="border: none; width: 100%;">
+				<input type="text" style="border: none; width: 100%;font-size: 8px;">
 			</td>
 		</tr>
 		<tr style="height:9.55pt">
@@ -132,13 +132,13 @@
 				<span style="font-family:'Arial Narrow'; font-size:9.5pt;">of</span>
 			</td>
 			<td colspan="2" style="width:61.4pt; border-bottom:solid 0.75pt;  vertical-align:bottom;">
-				<input type="text" style="border: none;">
+				<input type="text" style="border: none;font-size: 8px;">
 			</td>
 			<td style="width:70.5pt;  vertical-align:bottom;">
 				<span style="font-family:'Arial Narrow'; font-size:9.5pt;">Flag, IMO Nbr:</span>
 			</td>
 			<td colspan="3" style="width:49.65pt; border-bottom:solid 0.75pt;  vertical-align:bottom;">
-				<input type="text" style="border:none;">
+				<input type="text" style="border:none;font-size: 8px;">
 			</td>
 			<td style="width:88.45pt;  vertical-align:bottom;">
 				<span style="font-family:'Arial Narrow'; font-size:9.5pt;">(the “VESSEL”)</span>
@@ -183,7 +183,7 @@
         </thead>
         <tbody>
           <tr>
-            <td style=" text-align: center; border: 1px solid #000; font-size: 10px;">2nd Engineer</td>
+            <td style=" text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Enter place" style="width: 50%; padding: 4px; border: none;" id="rank"></td>
             <td style=" text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Enter place" style="width: 50%; padding: 4px; border: none;"></td>
             <td style=" text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Enter duration" style="width: 50%; padding: 4px; border: none;"> (+/- 1 Month)</td>
             <td style=" text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Enter date" style="width: 50%; padding: 4px; border: none;"></td>
@@ -206,12 +206,12 @@
         </thead>
         <tbody>
           <tr>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none;"></td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none;"></td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none;"></td>
-            <td style="padding: 8px; text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Amount" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
 
-            <td style="padding: 8px; text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Total" style="width: 100%; padding: 4px; border: none;"></td>
+            <td style="padding: 8px; text-align: center; border: 1px solid #000; font-size: 10px;"><input type="text" placeholder="Total" style="width: 100%; padding: 4px; border: none; text-align: center;"></td>
           </tr>
         </tbody>
       </table>
