--- a/views/public/html/JSWINFRA-contract.html
+++ b/views/public/html/JSWINFRA-contract.html
@@ -117,7 +117,7 @@
 </head>
 
 	<body class="body" style="background-color: #ffffff; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
-		<div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="../assets/img/illustrations/nautilus-logo.svg"  style="width:100%; height:90px"></div>
+		<div style="width:100%;background-color: #008E9C; text-align: center; height:100px;padding:3px"> <img src="./letter-pad-top.jpg"  style="width:100%; height:90px"></div>
 
 		
 		<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
@@ -672,7 +672,7 @@
 							</tbody>
 						</table>		
 
-						<div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.jpg"  style="width:100%; height:90px"></div>				
+						<div style="width:100%; height:10px; text-align: center;"> <img src="./Footer.png"  style="width:100%; height:90px"></div>				
 						<div class="page-break" ></div>
 <div style="margin-left: 30px;margin-right: 30px;">
 					<table class="row row-12" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;margin-top: 150px;">
