--- a/views/public/html/JSWINFRA-contract.html
+++ b/views/public/html/JSWINFRA-contract.html
@@ -118,7 +118,7 @@
 
 	<body class="body" style="background-color: #ffffff; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
 		<div style="width: 1024px; margin: 0 auto; background-color: #269396; text-align: center; height:100px;padding:3px"> <img src="./letter-pad-top.jpg"  style="height:90px"></div>
-
+		<div style="width: 1024px ; margin: 0 auto;">
 		
 		<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #ffffff;">
 			<tbody>
@@ -1292,7 +1292,9 @@
 				</td>
 			</tr>
 		</tbody>
-	</table><!-- End -->
+	</table>
+</div>
+	<!-- End -->
 	
 
     <button class="print-button" onclick="printPage()">Print Form</button>
